updated funktion favorites
