# swagger.json
@@ -833,7 +833,7 @@
             "content": {}
           },
           "404": {
-            "description": "Not found / Invalid user / Invalid session / Add request not made (invalid request)",
+            "description": "Not found / Invalid user / Invalid session ",
             "content": {}
           },
           "500": {
@@ -878,7 +878,7 @@
             "content": {}
           },
           "404": {
-            "description": "Not found / Invalid user / Invalid session / Add request not made (invalid request)",
+            "description": "Not found / Invalid user / Invalid session ",
             "content": {}
           },
           "500": {
@@ -907,7 +907,7 @@
             "name": "limit",
             "type": "string",
             "required": "true",
-            "default": "5",
+            "default": "9",
             "description": "Number of drinks per page"
           }
         ],
@@ -931,7 +931,7 @@
             "content": {}
           },
           "404": {
-            "description": "Not found / Invalid user / Invalid session / Users not found (invalid query) / Favorites drink not found / Search query not found (invalid query)",
+            "description": "Not found / Invalid user / Invalid session / Users not found (invalid query) / Favorites drink not found ",
             "content": {}
           },
           "500": {
@@ -1017,7 +1017,7 @@
           "password": {
             "type": "string",
             "description": "User's password",
-            "example": "qwerty12",
+            "example": "Qwerty?12",
             "minLength": 8,
             "maxLength": 100
           }
@@ -1074,7 +1074,7 @@
             "description": "User's password",
             "minLength": 8,
             "maxLength": 100,
-            "example": "qwerty12"
+            "example": "Qwerty?12"
           }
         }
       },
@@ -1243,8 +1243,7 @@
           "description",
           "instructions",
           "drinkThumb",
-          "ingredients",
-          "shortDescription"
+          "ingredients"
         ],
         "type": "object",
         "properties": {
@@ -1317,13 +1316,6 @@
                 }
               }
             }
-          },
-          "shortDescription": {
-            "type": "string",
-            "description": "Drink's short description",
-            "minLength": 2,
-            "maxLength": 500,
-            "example": "A refreshing and citrusy cocktail with a hint of mint."
           }
         }
       },
@@ -1482,7 +1474,7 @@
       "AddFavoriteResponse": {
         "type": "object",
         "properties": {
-          "favoritesDrink": {
+          "favoriteDrinks": {
             "type": "string",
             "description": "Number of favorite drinks",
             "example": "1"
@@ -1492,7 +1484,7 @@
       "DeleteFavoriteResponse": {
         "type": "object",
         "properties": {
-          "favoritesDrink": {
+          "favoriteDrinks": {
             "type": "string",
             "description": "Number of favorite drinks",
             "example": "1"
